--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.18.0",
     "loadash": "^1.0.0",
     "qs": "^6.6.0",
-    "vue": "^2.5.22"
+    "vue": "^2.5.22",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
